# llmflowstack

./: README.md  pyproject.toml
llmflow/: __init__.py
llmflow/base/: base.py
llmflow/callbacks/: stop_on_token.py
llmflow/models/: GPT_OSS.py  Gemma.py  LLaMA3.py  __init__.py
llmflow/rag/: pipeline.py
llmflow/schemas/: __init__.py  params.py
llmflow/utils/: generation_utils.py
llmflowstack/: __init__.py
llmflowstack/base/: base.py
llmflowstack/callbacks/: force_json.py
llmflowstack/collators/: multimodal_causal.py
llmflowstack/decoders/: BaseDecoder.py  GPT_OSS.py  __init__.py  base_decoder.py  gemma_3.py  gpt_2.py  gpt_oss.py  llama_3.py  llama_4.py  medgemma.py  qwen_3.py
llmflowstack/decoders_it/: __init__.py  base_instruct_decoder.py  gemma_3.py  gpt_oss.py  llama_3.py  llama_4.py  medgemma.py
llmflowstack/encoders/: BaseEncoder.py  __init__.py
llmflowstack/models/: GPT_OSS.py  Gemma.py  LLaMA3.py  LLaMA4.py  MedGemma.py  __init__.py
llmflowstack/rag/: VectorDatabase.py  __init__.py
llmflowstack/schemas/: __init__.py  params.py
llmflowstack/vector_database/: VectorDatabase.py
