[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "llmflowstack"
version = "1.3.1"
authors = [
  { name = "Gustavo Henrique Ferreira Cruz", email = "gustavohferreiracruz@gmail.com" }
]
description = "LLMFlowStack is a framework for training and using LLMs (LLaMA, GPT-OSS, Gemma, ...). Supports DAPT, fine-tuning, and distributed inference."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
  "accelerate",
  "bert-score",
  "chromadb",
  "datasets",
  "evaluate",
  "fbgemm_gpu_genai",
  "kernels",
  "langchain-chroma",
  "langchain_community",
  "mslk-cuda==1.0.0",
  "nltk",
  "peft",
  "pillow",
  "rouge-score",
  "safetensors",
  "sentence-transformers",
  "torch",
  "torchao==0.16.0",
  "transformers==4.57.6",
  "triton",
  "trl",
]