[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "llmflowstack"
version = "1.4.0"
authors = [
  { name = "Gustavo Henrique Ferreira Cruz", email = "gustavohferreiracruz@gmail.com" }
]
description = "LLMFlowStack is a framework for training and using LLMs (LLaMA, GPT-OSS, Gemma, ...). Supports DAPT, fine-tuning, and distributed inference."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
  "accelerate",
  "datasets",
  "fbgemm_gpu_genai",
  "kernels",
  "mslk-cuda==1.0.0",
  "peft",
  "pillow",
  "safetensors",
  "torch",
  "torchao==0.16.0",
  "transformers",
  "triton",
  "trl",
]