[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "llmflowstack"
version = "1.4.2"
authors = [
  { name = "Gustavo Henrique Ferreira Cruz", email = "gustavohferreiracruz@gmail.com" }
]
description = "LLMFlowStack is a framework for training and using LLMs (LLaMA, GPT-OSS, Gemma, ...). Supports DAPT, fine-tuning, and distributed inference."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
  "accelerate",
  "datasets",
  "fbgemm_gpu_genai",
  "kernels",
  "peft",
  "pillow",
  "safetensors",
  "torchao==0.16.0",
  "transformers==5.3.0",
  "triton",
  "trl",
]